--- a/MyRadioAlarm_Christmas2023.html
+++ b/MyRadioAlarm_Christmas2023.html
@@ -2,6 +2,27 @@
 <html>
 <head>
     <title>Your Radio Stream Alarm</title>
+   
+    <style>
+        body {
+            background-image: url('back.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
+
+        h2, p {
+            text-align: center;
+        }
+    </style>
+
+
+    
 </head>
 <body>
     <h2 style="text-align: center;">Your Radio Stream Alarm</h2>
