--- a/pelno_skaiciuokle.html
+++ b/pelno_skaiciuokle.html
@@ -1,8 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Grynojo pelno skaičiuoklė</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grynojo pelno skaičiuoklė</title>
+
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 300px;
+        }
+
+        label {
+            margin-bottom: 5px;
+        }
+
+        input {
+            margin-bottom: 10px;
+        }
+
+        #hourlySalary, #officeExpenses, #totalSalary {
+            margin-top: 10px;
+        }
+    </style>
 
     <script>
         function calculateSalary() {
@@ -26,13 +56,13 @@
 
     <form>
         <label for="price">Kaina:</label>
-        <input type="number" id="price" required><br>
+        <input type="number" id="price" required>
 
         <label for="hours">Darbo valandos:</label>
-        <input type="number" id="hours" required><br>
+        <input type="number" id="hours" required>
 
         <label for="expenses">Išlaidos:</label>
-        <input type="number" id="expenses" required><br>
+        <input type="number" id="expenses" required>
 
         <input type="button" value="Calculate" onclick="calculateSalary()">
     </form>
