--- a/pelno_skaiciuokle.html
+++ b/pelno_skaiciuokle.html
@@ -52,7 +52,7 @@
 </head>
 <body>
 
-    <h2>Grynojo pelno skaičiuoklė</h2>
+    <h2>Pelno skaičiuoklė</h2>
 
     <form>
         <label for="price">Kaina:</label>
