--- a/pelno_skaiciuokle.html
+++ b/pelno_skaiciuokle.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grynojo pelno skaičiuoklė</title>
+    <title>Pelno skaičiuoklė</title>
 
     <style>
         body {
@@ -12,6 +12,8 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            flex-direction: column;
+            text-align: center;
         }
 
         form {
@@ -19,6 +21,7 @@
             flex-direction: column;
             align-items: center;
             width: 300px;
+            margin-top: 20px; /* Adjust the margin as needed */
         }
 
         label {
@@ -64,7 +67,7 @@
         <label for="expenses">Išlaidos:</label>
         <input type="number" id="expenses" required>
 
-        <input type="button" value="Calculate" onclick="calculateSalary()">
+        <input type="button" value="Skaičiuoti" onclick="calculateSalary()">
     </form>
 
     <div id="hourlySalary"></div>
