--- a/pelno_skaiciuokle.html
+++ b/pelno_skaiciuokle.html
@@ -9,7 +9,7 @@
         body {
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;
             height: 100vh;
             margin: 0;
             flex-direction: column;
