--- a/pelno_skaiciuokle.html
+++ b/pelno_skaiciuokle.html
@@ -14,6 +14,7 @@
             margin: 0;
             flex-direction: column;
             text-align: center;
+            background: url('pattern.jpg');
         }
 
         form {
