--- a/pelno_skaiciuokle.html
+++ b/pelno_skaiciuokle.html
@@ -1,29 +1,81 @@
-body {
-    display: flex;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-    flex-direction: column;
-    text-align: center;
-    background: url('pattern.jpg');
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pelno skaičiuoklė</title>
 
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 300px;
-    margin-top: 20px; /* Adjust the margin as needed */
-}
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            flex-direction: column;
+            text-align: center;
+            background: url('pattern.jpg'); /* Replace with the correct path to your background image */
+        }
 
-label {
-    margin-bottom: 5px;
-}
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 300px;
+            margin-top: 20px; /* Adjust the margin as needed */
+            background: white; /* Optional: Set a background color for the form */
+            padding: 20px; /* Optional: Add padding for better visibility */
+            border-radius: 10px; /* Optional: Add border-radius for rounded corners */
+        }
 
-input {
-    margin-bottom: 10px;
-}
+        label {
+            margin-bottom: 5px;
+        }
 
-#hourlySalary, #officeExpenses, #totalSalary {
-    margin-top: 10px;
-}
+        input {
+            margin-bottom: 10px;
+        }
+
+        #hourlySalary, #officeExpenses, #totalSalary {
+            margin-top: 10px;
+        }
+    </style>
+
+    <script>
+        function calculateSalary() {
+            var price = parseFloat(document.getElementById('price').value);
+            var hours = parseFloat(document.getElementById('hours').value);
+            var expenses = parseFloat(document.getElementById('expenses').value);
+
+            var hourlySalary = hours * 20;
+            var officeExpenses = hours * 8;
+            var totalSalary = price - hourlySalary - expenses - officeExpenses;
+
+            document.getElementById('hourlySalary').innerHTML = "Atlyginimas: " + hourlySalary + " Euro";
+            document.getElementById('officeExpenses').innerHTML = "Ofiso išlaidos: " + officeExpenses + " Euro";
+            document.getElementById('totalSalary').innerHTML = "Grynasis pelnas: " + totalSalary + " Euro";
+        }
+    </script>
+</head>
+<body>
+
+    <h2>Pelno skaičiuoklė</h2>
+
+    <form>
+        <label for="price">Kaina:</label>
+        <input type="number" id="price" required>
+
+        <label for="hours">Darbo valandos:</label>
+        <input type="number" id="hours" required>
+
+        <label for="expenses">Išlaidos:</label>
+        <input type="number" id="expenses" required>
+
+        <input type="button" value="Skaičiuoti" onclick="calculateSalary()">
+    </form>
+
+    <div id="hourlySalary"></div>
+    <div id="officeExpenses"></div>
+    <div id="totalSalary"></div>
+
+</body>
+</html>
