--- a/pelno_skaiciuokle.html
+++ b/pelno_skaiciuokle.html
@@ -14,7 +14,7 @@
             margin: 0;
             flex-direction: column;
             text-align: center;
-            background: url('pattern.jpg'); /* Replace with the correct path to your background image */
+            background: url('pattern.jpg'); 
         }
 
         form {
