--- a/pelno_skaiciuokle.html
+++ b/pelno_skaiciuokle.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,12 +9,12 @@
         body {
             display: flex;
             justify-content: center;
-            align-items: flex-start;
+            align-items: center;
             height: 100vh;
             margin: 0;
             flex-direction: column;
             text-align: center;
-            background: url('pattern.jpg'); /* Set the path to your pattern image */
+            background: url('pattern.jpg');
         }
 
         form {
@@ -23,9 +23,6 @@
             align-items: center;
             width: 300px;
             margin-top: 20px; /* Adjust the margin as needed */
-            background: white; /* Optional: Set a background color for the form */
-            padding: 20px; /* Optional: Add padding for better visibility */
-            border-radius: 10px; /* Optional: Add border-radius for rounded corners */
         }
 
         label {
