--- a/Pizza_Calculator.html
+++ b/Pizza_Calculator.html
@@ -11,7 +11,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-image: url("C:/Users/Andrej.Spilevoj/Desktop/pizza_back.jpg");
+            background-image: url("https://andrejspilevoj.github.io/HappyEverAfter/pizza_back.jpg");
             background-size: cover;
             background-position: center;
             flex-direction: column;
