--- a/Pizza_Calculator.html
+++ b/Pizza_Calculator.html
@@ -92,7 +92,7 @@
             var largeValue = (largeArea / largePrice).toFixed(2);
 
             // Display calculated values in a pop-up
-            alert("For each 1 euro for Small Pizza you get " + smallValue + " squared cm of cheese covered pizza.\nFor each 1 euro for Large Pizza you get " + largeValue + " squared cm of cheese covered pizza.");
+            alert("1 euro for SMALL Pizza will get you " + smallValue + " squared cm of cheese covered pizza.\n 1 euro for LARGE Pizza will get you " + largeValue + " squared cm of cheese covered pizza.");
         }
     </script>
 </head>
