--- a/typing_game.html
+++ b/typing_game.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vaikų IT raštingumo pamoka</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <style>
         body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -19,9 +20,10 @@
         }
 
         h1 {
-            font-size: 36px;
-            color: #1e1e1e;
-            margin-bottom: 40px; /* Increased space below the title */
+            font-size: 48px;
+            color: #0055b3; /* Button color */
+            margin: 20px 0;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         h2 {
@@ -73,7 +75,7 @@
             background-color: #f0f4f8;
             color: #007aff;
             border: 1px solid #007aff;
-            margin: 30px 10px 0 10px; /* Adjust margin to place lower */
+            margin: 30px 10px 0 10px;
         }
 
         .small-button:hover {
