--- a/typing_game.html
+++ b/typing_game.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vaikų IT raštingumo pamoka</title>
+    <title>ŠEIMOS LENKTYNĖS</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <style>
         body {
@@ -111,6 +111,29 @@
         .retry {
             color: #dc3545;
         }
+
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+        }
+
+        .modal-content button {
+            margin-top: 20px;
+        }
     </style>
     <script>
         let parentPhrase = "";
@@ -202,7 +225,7 @@
 
                 // Check if the child typed the phrase correctly and within the parent's time
                 if (childPhrase === parentPhrase && childSpeed <= parentSpeed) {
-                    document.getElementById('message').innerText = "Šaunuolis!";
+                    document.getElementById('message').innerText = "Nuostabu!";
                     document.getElementById('message').classList.remove("retry");
                     document.getElementById('message').classList.add("success");
                     successSound.play();  // Play success sound
@@ -242,11 +265,37 @@
             childTimerStarted = false;
             clearInterval(parentInterval);
             clearInterval(childInterval);
+
+            // Reset the popup flag
+            localStorage.setItem('popupShown', 'false');
         }
+
+        // Show popup modal if not already shown
+        function checkPopup() {
+            if (localStorage.getItem('popupShown') === 'false' || localStorage.getItem('popupShown') === null) {
+                showPopup('Sveiki atvykę į edukacinį žaidimą - Šeimos lenktynės! <br>Šiame žaidime dalyvauja 2 žaidėjai: vaikas ir vienas iš tėvų. <br>Žaidimo tikslas: vaikas turi aplenkti savo varžovą atkartodamas <br>jo parašytą žodį ar frazę per tą patį laiką arba greičiau. <br>Tad linkime jums sėkmės!');
+                localStorage.setItem('popupShown', 'true');
+            }
+        }
+
+        // Show popup modal
+        function showPopup(message) {
+            const modal = document.getElementById('popup');
+            document.getElementById('popup-message').innerHTML = message;
+            modal.style.display = 'flex';
+        }
+
+        // Close popup modal
+        function closePopup() {
+            document.getElementById('popup').style.display = 'none';
+        }
+
+        // Run the checkPopup function when the page loads
+        window.onload = checkPopup;
     </script>
 </head>
 <body>
-    <h1>Vaikų IT raštingumo pamoka</h1>
+    <h1>ŠEIMOS LENKTYNĖS</h1>
 
     <h2>Įveskite frazę (tėvai):</h2>
     <input type="text" id="parent-input" onfocus="startParentTyping()" oninput="trackParentTyping()">
@@ -261,5 +310,13 @@
 
     <!-- Global refresh button with adjusted style -->
     <button class="small-button" onclick="refreshGame()">Nauja frazė</button>
+
+    <!-- Popup modal -->
+    <div id="popup" class="modal">
+        <div class="modal-content">
+            <p id="popup-message"></p>
+            <button onclick="closePopup()">PRADĖKIME!</button>
+        </div>
+    </div>
 </body>
 </html>
