--- a/veiksmu_laikrodis.html
+++ b/veiksmu_laikrodis.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -193,6 +192,13 @@
 </head>
 <body onclick="toggleView()">
     <table>
+        <thead>
+            <tr>
+                <td colspan="2" style="font-weight: bold; font-size: 4rem; text-transform: uppercase; color: white; background: none; border: none; padding: 20px 0; text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);">
+                VEIKSMŲ LAIKRODIS
+                </td>
+            </tr>
+        </thead>
         <tr>
             <td id="hours" class="fade"></td>
             <td id="val" class="fade">val.</td>
