--- a/veiksmu_laikrodis.html
+++ b/veiksmu_laikrodis.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Math Time</title>
+    <title>Veiksmų laikrodis</title>
     <style>
         body {
             display: flex;
